<resources>
    <string name="app_name">RestaurantRent(For Owners)</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save_button">Сохранить</string>
    <string name="drop_table_text">перетащите\nстол, чтобы его удалить</string>
    <string name="email_text">Электронная почта</string>
    <string name="password_text">Пароль</string>
    <string name="is_registered_text">Ещё не зарегистрированы?</string>
    <string name="register_text">Зарегистрироваться</string>
    <string name="login_text">Войти</string>
    <string name="profile_text">Профиль</string>
    <string name="restaurants_text">Рестораны</string>
    <string name="rents_text">Заказы</string>
    <string name="title_restaurant_text">Название</string>
    <string name="address_text">Адрес</string>
    <string name="register_restaurant_text">Продолжить</string>
    <string name="out_text">Выйти</string>
    <string name="delete_rent_text">Удалить бронь</string>
    <string name="cancel_text">Отменить</string>
    <string name="delete_restaurant_text">Удалить ресторан</string>
    <string name="edit_text">Редактировать</string>
    <string name="add_restaurant_text">Добавить ресторан</string>
    <string name="out_account_text">Выйти из аккаунта</string>
    <string name="email_not_confirm">Почта не подтверждена</string>
    <string name="email_confirm">Почта подтверждена</string>
    <string name="chat_title">Сообщения от клиента</string>
    <string name="rent_title">Список заказов</string>
</resources>
