<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.LoginActivity">


    <EditText
        android:id="@+id/restaurantNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/fields"
        android:ems="10"
        android:hint="@string/title_restaurant_text"
        android:inputType="textPersonName"
        android:padding="13dp"
        android:textColor="@color/colorTextEditText"
        android:textColorHint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/restaurantAdressEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/fields"
        android:ems="10"
        android:hint="@string/address_text"
        android:inputType="textPersonName"
        android:padding="13dp"
        android:textColor="@color/colorTextEditText"
        android:textColorHint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantNameEditText" />

    <Button
        android:id="@+id/toAddRestaurantButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="117dp"
        android:background="@drawable/button"
        android:onClick="registerRestaurantButton"
        android:text="@string/register_restaurant_text"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantAdressEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>